swagger issue fixed